...
            "value" : "الملف الشخصي"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Profile"
          }
        }
      }
    },
    "oEK-QG-ebR.text" : {
      "comment" : "Class = \"UILabel\"; text = \"Welcome to Arabah\"; ObjectID = \"oEK-QG-ebR\";",
...
